--- a/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8082
+spring.application.name=pricing-service
+
+logging.level.org.springframework=debug
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+
+spring.config.import=optional:configserver:
